incomplete (to finish)

--- a/3 storing data  exercises/storing_data_(need)_exercises.ipynb
+++ b/3 storing data  exercises/storing_data_(need)_exercises.ipynb
@@ -1,1 +1,176 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Need) Exercises</span></div>"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Need) Exercises</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f8d20c7-932b-4487-8eed-78d760e959a3",
+   "metadata": {},
+   "source": [
+    "##### Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbff6307-fdb7-4ebb-888f-a6f24d33e9fe",
+   "metadata": {},
+   "source": [
+    "1. 2 similaries: can know the size using len(), able to access data using indices\n",
+    "2. 2 differences:\n",
+    "- All operations work for arrays, while only 'addition' and 'multiplication'\n",
+    "- Operations done to arrays work like in Mathematics, while operations done in\n",
+    "3. Dictionary: a data structure that allows us to easily write very efficient code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67bcf791-f325-49df-9e91-be688d84ebf8",
+   "metadata": {},
+   "source": [
+    "##### Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2c1ae1bb-4d95-43b6-9bb1-fd3b28ebae35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1\n",
+      "c3\n",
+      "e5\n",
+      "g7\n",
+      "i9\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_list = [\"a1\", \"b2\", \"c3\", \"d4\", \"e5\", \"f6\", \"g7\", \"h8\", \"i9\", \"j10\"]\n",
+    "print(py_list[0])   # Prints 'a1'\n",
+    "print(py_list[2])   # Prints 'c3'\n",
+    "print(py_list[4])   # Prints 'e5'\n",
+    "print(py_list[6])   # Prints 'g7'\n",
+    "print(py_list[8])   # Prints 'i9'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eb7aec2-825c-4b73-a3ee-21d8ce556504",
+   "metadata": {},
+   "source": [
+    "##### Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b00d755d-5222-48b7-9965-2df831e5257b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elements = ['Hydrogen',\n",
+    "            'Helium', 'Lithium',\n",
+    "            'Beryllium', 'Boron', 'Carbon',\n",
+    "            'Nitrogen', 'Oxygen',\n",
+    "            'Fluorine',\n",
+    "            'Neon']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d7d6b31e-7829-4f22-99f7-950261747313",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'elements' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43melements\u001b[49m[\u001b[38;5;241m3\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'elements' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "elements[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41db532b-c582-4603-b93e-b0652d7fcc88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a0b9ebd-5661-4873-9f51-e563736a20db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "175d0cf1-5423-4cf8-aa78-d1678a4b016d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
