--- a/3 storing data  exercises/storing_data_(good)_exercises.ipynb
+++ b/3 storing data  exercises/storing_data_(good)_exercises.ipynb
@@ -8,6 +8,167 @@
    "source": [
     "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Storing Data (Good) Exercises</span></div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6611b774-0012-4464-bbcb-5d49fe678704",
+   "metadata": {},
+   "source": [
+    "##### Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bb3f375-d1d9-47bd-a968-8aeed474165d",
+   "metadata": {},
+   "source": [
+    "| Term       | Brief description |\n",
+    "|:--|:--|\n",
+    "| Subsetting |*Select*|\n",
+    "| Indexing   |Selecting one element|\n",
+    "| Slicing    |Selecting a range of elements|\n",
+    "| Masking    |Mask what is false and show what is true|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2d92cdb-8f47-4f54-a7ca-ccfc91ab16a7",
+   "metadata": {},
+   "source": [
+    "##### Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5509dc0a-d254-465a-a557-027d48525ac1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8e1e79ac-59d2-433b-8028-f1cf92edc634",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np_array_2d = np.array([[1, \"A\"], [3, \"C\"], [2, \"B\"], [4, \"D\"],\n",
+    "                        [5, \"E\"], [7, \"G\"], [6, \"F\"], [8, \"H\"],\n",
+    "                        [10, \"J\"], [9, \"I\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b35ec225-8c32-454d-825f-b4e1c6c7f6f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1', '3', '2', '4', '5', '7', '6', '8', '10', '9'], dtype='<U21')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array_integers = np_array_2d[0:10,0]\n",
+    "np_array_integers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "abc3ad93-4e31-43e8-bf82-683972cacda2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  3,  2,  4,  5,  7,  6,  8, 10,  9])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "integers = np_array_integers.astype(int)\n",
+    "integers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b6a93f33-598a-446c-b3cc-3dd0be0c789a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 0, 0, 1, 1, 0, 0, 0, 1])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remainders = integers % 2\n",
+    "remainders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b8d311d4-cb82-4552-8565-2ab06f1bdc29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True, False, False,  True,  True, False, False, False,\n",
+       "        True])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = remainders == 1\n",
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b61f95bb-9802-4e28-8fae-91919e29f734",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['A', 'C', 'E', 'G', 'I'], dtype='<U21')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_array_2d [mask,1]"
+   ]
   }
  ],
  "metadata": {
