--- a/6 files, folders & os/files,_folders_&_os_(need).ipynb
+++ b/6 files, folders & os/files,_folders_&_os_(need).ipynb
@@ -1,1 +1,324 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Files, Folders & OS (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 Important concepts"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.1 Path"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.2 More about relative paths"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### macOS or Linux"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.3 Path separator"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.4 Text files vs.\u00a0Binary files"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.5 Extensions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 Opening and closing files"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2.1 Reading data"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2.2 Writing data"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Writing to a file in one go"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Writing to a file, line by line"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 3 Some useful packages"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 4 OS safe paths"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 5 Folders"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 5.1 Creating folders"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 5.2 Checking for existence"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Using try-except"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Using os.path.exists()"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 5.3 Copying files"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 6 Listing and looking for files"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 7 Extracting file info"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 8 Deleting stuff"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Files, Folders & OS (Need)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9dd3ac32",
+   "metadata": {},
+   "source": [
+    "# 1 Important concepts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61697f52-7705-4e66-8282-f3ad72309e9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#work on all sorts of operating systems without being subjected to the whims of that system"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6af2ebd1",
+   "metadata": {},
+   "source": [
+    "## 1.1 Path"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3e8e1808",
+   "metadata": {},
+   "source": [
+    "## 1.2 More about relative paths"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "69df5fab",
+   "metadata": {},
+   "source": [
+    "### macOS or Linux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be2f612d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "082283dc",
+   "metadata": {},
+   "source": [
+    "## 1.3 Path separator"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4f307807",
+   "metadata": {},
+   "source": [
+    "## 1.4 Text files vs. Binary files"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "70474bcc",
+   "metadata": {},
+   "source": [
+    "## 1.5 Extensions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ab2d9c89",
+   "metadata": {},
+   "source": [
+    "# 2 Opening and closing files"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e8ce5686",
+   "metadata": {},
+   "source": [
+    "## 2.1 Reading data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ab510e1f",
+   "metadata": {},
+   "source": [
+    "## 2.2 Writing data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "de6ebd6b",
+   "metadata": {},
+   "source": [
+    "### Writing to a file in one go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9cee49c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8f756262",
+   "metadata": {},
+   "source": [
+    "### Writing to a file, line by line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e36bfa1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3b40ce24",
+   "metadata": {},
+   "source": [
+    "# 3 Some useful packages"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bb67b22c",
+   "metadata": {},
+   "source": [
+    "# 4 OS safe paths"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ae969746",
+   "metadata": {},
+   "source": [
+    "# 5 Folders"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bb249b8e",
+   "metadata": {},
+   "source": [
+    "## 5.1 Creating folders"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "57d6efe2",
+   "metadata": {},
+   "source": [
+    "## 5.2 Checking for existence"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7570b68d",
+   "metadata": {},
+   "source": [
+    "### Using try-except"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "314ea877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3ac7313d",
+   "metadata": {},
+   "source": [
+    "### Using os.path.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0b40b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d6bb3af1",
+   "metadata": {},
+   "source": [
+    "## 5.3 Copying files"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b5c1418a",
+   "metadata": {},
+   "source": [
+    "# 6 Listing and looking for files"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1e646409",
+   "metadata": {},
+   "source": [
+    "# 7 Extracting file info"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e67513d9",
+   "metadata": {},
+   "source": [
+    "# 8 Deleting stuff"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
